Updated my education with the new masters degree

--- a/index.html
+++ b/index.html
@@ -64,6 +64,20 @@
 							<article id="academic">
 								<h2 class="major">Education</h2>
 								<span class="image main"><img src="images/a1.jpg" alt="" /></span>
+								<h3>MSc. Financial Engineering</h3>
+								<strong>WorldQuant University, New Orleans, Louisiana<br></strong>
+								<em>Oct, 2024 - Present</em>
+								<p>
+									Currently pursuing an MSc in Financial Engineering to deepen expertise in quantitative finance and leverage cutting-edge methods to drive innovative financial solutions.
+								</p>
+								<p>
+									I am looking to develop my skills in advanced financial modeling, programming for financial applications, Risk analytics, statistical analytics and much more.
+								</p>
+								<!-- <p>
+									<a href="https://aims.ac.rw/" target="_blank">AIMS Rwanda Website</a>
+								</p> -->
+
+
 								<h3>MSc. Mathematical Sciences, Data Science Major</h3>
 								<strong>African Institute for Mathematical Sciences (AIMS), Rwanda<br></strong>
 								<em>Aug, 2022 - Jun, 2023</em>
