Updated the website with my new academic certificate and new pictures

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Immaculate Wanjiru Kimani</h1>
-								<p>Research Fellow | Data Scientist | Project Manager</p>
+								<p>Data Scientist | MEAL Consultant | Project Manager</p>
 							</div>
 						</div>
 						<nav>
@@ -50,7 +50,7 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About Me</h2>
-								<span class="image main"><img src="images/p4.jpg" alt="Immaculate Wanjiru Kimani" /></span>
+								<span class="image main"><img src="images/IMG_1425.jpg" alt="Immaculate Wanjiru Kimani" /></span>
 								
 								<p>Hello! I’m Immaculate Wanjiru Kimani, a <strong>Data Scientist and Consultant</strong> specializing in <strong>financial engineering, machine learning, and impact evaluation</strong>. I have a strong background in <strong>data science, actuarial science, and financial modeling</strong>, and I use these skills to drive insights in financial inclusion, risk assessment, and education initiatives.</p>
 								
@@ -118,7 +118,7 @@
 						<!-- work -->
 							<article id="work">
 								<h2 class="major">Professional Experience</h2>
-								<span class="image main"><img src="images/p2.jpg" alt="" /></span>						
+								<span class="image main"><img src="images/p4.jpg" alt="" /></span>						
 								<!-- New Consultancy Role -->
 								<h3>Consultant – Data Scientist & Math Olympiad Manager</h3>
 								<strong>AHEEN RDP Pathways Program, University of Nairobi<br></strong>
@@ -211,8 +211,14 @@
 						<!-- Licenses & Certifications -->
 						<article id="certifications">
 							<h2 class="major">Licenses & Certifications</h2>
-							<span class="image main"><img src="images/l1.jpg" alt="" /></span>
+							<span class="image main"><img src="images/IMG_1439.jpg" alt="" /></span>
 							<ul>
+								<li>
+									<strong>Foundation in Financial Engineering</strong> - Feb 2025<br>
+									<!-- Virtual Program<br> -->
+									Skills: Financial Markets Modelling, Financial data and analysis<br>
+									<a href="https://drive.google.com/file/d/1ViCUDWk6sC49PNu3ytQDu1g4cfsxtk7a/view?usp=sharing" target="_blank">View Certificate</a>
+								</li>
 								<li>
 									<strong>McKinsey & Company's Diversity Connect Europe 2024</strong> - Jun 2024<br>
 									<!-- Virtual Program<br> -->
