Updating the conferences and Projects I am currently working on

--- a/index.html
+++ b/index.html
@@ -304,7 +304,14 @@
 								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/pro.jpg" alt="" /></span>
 
-						<!-- Ongoing Project -->					
+						<!-- Ongoing Project1 -->					
+								<h3>Leveraging Artificial Intelligence for Monitoring, Evaluation, and Learning (MEL) in Education in Emergencies: A Case Study of the AHEEN RDP Pathways Program</h3>
+								<p><em>Ongoing Research — 2025</em></p>
+								<p>
+									This study examines how artificial intelligence (AI) can transform monitoring, evaluation, and learning (MEL) systems for refugee education programs, using the AHEEN RDP Pathways Program as a case study. 
+								</p>		
+
+						<!-- Ongoing Project2 -->					
 								<h3>Unveiling the Influence: Exploring Financial Inclusion through Social Media Influencers in Emerging Economies</h3>
 								<p><em>Ongoing Research — 2024</em></p>
 								<p>
@@ -373,6 +380,12 @@
 
 								<h3>Conferences</h3>
 								<ul>
+									<li>
+										<strong>Global AI Summit on Africa (GAIS 2025)</strong><br>
+										April 2-4, 2025<br>
+										 
+										<a href="https://c4ir.rw/global-ai-summit-on-africa" target="_blank">Summit</a>
+									</li>
 									<li>
 										<strong>6th Cluster Conference: "Machine Learning in Science" 2024</strong><br>
 										Jul 9-10, 2024<br>
