--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="#">
+								<form method="post" action="https://formspree.io/f/xanbylpb">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -420,13 +420,15 @@
 										</div>
 										<div class="field half">
 											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
+											<input type="email" name="email" id="email" />
 										</div>
 										<div class="field">
 											<label for="message">Message</label>
 											<textarea name="message" id="message" rows="4"></textarea>
 										</div>
 									</div>
+									<input type="hidden" name="_subject" value="New message from website">
+									<input type="hidden" name="_redirect" value="https://yourdomain.com/thank-you.html" />
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
