Updated post with POST to see if the Contact me section would work.

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="https://formspree.io/f/xanbylpb">
+								<form method="POST" action="https://formspree.io/f/xanbylpb">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -429,6 +429,7 @@
 									</div>
 									<input type="hidden" name="_subject" value="New message from website">
 									<input type="hidden" name="_redirect" value="https://yourdomain.com/thank-you.html" />
+
 									<ul class="actions">
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
